[package]
name = "robloc"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", default-features = false, features = [
    "charset",
    "system-proxy",
    "http2",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
zeroize = "1.8.1"

[features]
rover = []
